--- a/index.html
+++ b/index.html
@@ -84,12 +84,20 @@
       <div class="container">
         <div class="meta" data-lang-nl="Over" data-lang-en="About">Over</div>
         <h2>Vitrien</h2>
-        <p 
-          data-lang-nl="Vitrien is een nomadisch kunstinitiatief dat onverwachte of leegstaande plekken in de stad tijdelijk activeert met unieke tentoonstellingen. Kunst verschijnt waar je het niet verwacht: in winkelruiten, leegstaande panden of zelfs in een parkeergarage. Zo wordt de straat zelf een galerij. Vitrien is tegelijk een sociaal project en een artistiek experiment: expo’s worden gecombineerd met cocktails en momenten van ontmoeting. We zoeken steeds naar manieren om interactie uit te lokken, zodat er een toegankelijke ervaring ontstaat die voorbijgangers uitnodigt tot verwondering en connectie."
-          data-lang-en="Vitrien is a nomadic art initiative that temporarily activates unexpected or vacant places in the city with unique exhibitions. Art appears where you least expect it: in shop windows, empty buildings, or even in a parking garage. The street itself becomes a gallery. Vitrien is both a social project and an artistic experiment: exhibitions are combined with cocktails and encounters. We actively seek ways to trigger interaction, creating an accessible experience that invites passers-by to wonder and connect."
+    
+        <p
+          data-lang-nl="Vitrien is een nomadisch kunstinitiatief dat onverwachte of leegstaande plekken in de stad tijdelijk activeert met unieke tentoonstellingen. Kunst verschijnt waar je het niet verwacht: in winkelruiten, leegstaande panden of zelfs in een parkeergarage. Zo wordt de straat zelf een galerij. Vitrien is tegelijk een sociaal project en een artistiek experiment: expo’s worden gecombineerd met cocktails en momenten van ontmoeting. We zoeken steeds naar manieren om interactie uit te lokken, zodat er een toegankelijke ervaring ontstaat die voorbijgangers uitnodigt tot verwondering en connectie. Vitrien werkt bewust guerilla style: kleine interventies die licht en wendbaar zijn, zodat we meer kunnen doen."
+          data-lang-en="Vitrien is a nomadic art initiative that temporarily activates unexpected or vacant places in the city with unique exhibitions. Art appears where you least expect it: in shop windows, empty buildings, or even in a parking garage. The street itself becomes a gallery. Vitrien is both a social project and an artistic experiment: exhibitions are combined with cocktails and encounters. We actively seek ways to trigger interaction, creating an accessible experience that invites passers-by to wonder and connect. Vitrien deliberately works in a guerrilla style: small, light, and flexible interventions so we can do more."
         >
           Vitrien is een nomadisch kunstinitiatief dat onverwachte of leegstaande plekken in de stad tijdelijk activeert met unieke tentoonstellingen. Kunst verschijnt waar je het niet verwacht: in winkelruiten, leegstaande panden of zelfs in een parkeergarage. Zo wordt de straat zelf een galerij.
         </p>
+    
+        <a class="button team-button"
+           href="/team"
+           data-lang-nl="Ontmoet het team"
+           data-lang-en="Meet the team">
+          Ontmoet het team
+        </a>
       </div>
     </section>
 
