--- a/paginas/team.html
+++ b/paginas/team.html
@@ -1,135 +1,94 @@
-<!DOCTYPE html>
-<html lang="nl">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Team – Vitrien</title>
-  <link rel="stylesheet" href="../style.css" />
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'IM Fell English', serif;
-    }
+<section id="team">
+  <div class="container">
+    <div class="meta" data-lang-nl="Team" data-lang-en="Team">Team</div>
+    <h2 data-lang-nl="Ontmoet het team" data-lang-en="Meet the team">Ontmoet het team</h2>
 
-    header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: white;
-      z-index: 10;
-      border-bottom: none;
-    }
+    <div class="team-list">
 
-    .header-container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .left, .right {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-
-    .home-button {
-      font-size: 1.2rem;
-      font-weight: bold;
-      text-decoration: none;
-      color: black;
-    }
-
-    .top-button, .language-select {
-      font-size: 1rem;
-      text-decoration: none;
-      color: black;
-      background: none;
-      border: none;
-    }
-
-    main {
-      margin-top: 100px;
-      padding: 40px 20px;
-      max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 20px;
-    }
-
-    p {
-      font-size: 1.2rem;
-      line-height: 1.6;
-      margin-bottom: 1em;
-    }
-
-    .bottom-nav {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      padding: 40px 20px;
-      border-top: 1px solid black;
-      margin-top: 80px;
-      flex-wrap: wrap;
-    }
-
-    .bottom-nav a {
-      text-decoration: none;
-      color: black;
-      font-size: 1rem;
-      padding: 8px 12px;
-      border: 1px solid black;
-      transition: background-color 0.3s ease;
-    }
-
-    .bottom-nav a:hover {
-      background-color: #e50a06;
-      color: white;
-    }
-  </style>
-</head>
-<body>
-
-  <header>
-    <div class="header-container">
-      <div class="left">
-        <a href="../index.html" class="home-button">VITRIEN</a>
+      <div class="team-member">
+        <button class="team-name">Aya Koné (1996)</button>
+        <div class="team-bio">
+          Aya Koné is een interdisciplinair kunstenaar die werkt tussen Leuven en Duitsland. 
+          Haar praktijk beweegt zich tussen beeldhouwkunst, installatie en materiaalkunde en onderzoekt hoe cultureel geheugen wordt gevormd door breuk, herstel en herhaling. 
+          Ze gebruikt rituele objecten, architectuur en levende materialen zoals mycelium, aarde en bioplastics om veranderende erfenissen zichtbaar te maken. 
+          Via een onderzoeksgedreven methode waarin schrijven, sculptuur en materiële transformatie samenkomen, verkent ze thema’s van traditie, vertaling, verlies en vernieuwing binnen hedendaagse culturele contexten.
+        </div>
       </div>
-      <div class="right">
-        <a href="#contact" class="top-button">Contact</a>
-        <select class="language-select">
-          <option value="nl">NL</option>
-          <option value="en">EN</option>
-        </select>
+
+      <div class="team-member">
+        <button class="team-name">Joseph Thabang Palframan (1997)</button>
+        <div class="team-bio">
+          Joseph Thabang Palframan is een kunstenaar geboren in Windhoek, Namibië, en woont en werkt in België. 
+          Opgegroeid tussen Zuidelijk Afrika en Europa put hij inspiratie uit democratie, hood culture en muziekvideo’s om mogelijke toekomstige representaties te onderzoeken. 
+          Zijn praktijk richt zich op het zichtbaar maken van verstoringen en tegenstellingen, waarbij ook de donkere kanten van realiteit en psyche een plaats krijgen. 
+          Hij schuift deze thema’s naar voren zonder hun complexiteit te verliezen, steeds balancerend tussen licht en schaduw.
+        </div>
       </div>
+
+      <div class="team-member">
+        <button class="team-name">Thomas De Paepe (2000)</button>
+        <div class="team-bio">
+          Thomas De Paepe studeerde Sociologie en Cultuurmanagement en is actief op het snijvlak van kunst, stedelijke ontwikkeling en technologie. 
+          Hij werkte mee aan uiteenlopende projecten in de cultuursector, van onderzoek bij Kunstenpunt tot jurylid bij de Antwerpse Modeacademie. 
+          Zijn interesses lopen van duurzaamheid en stedelijke transities tot mode, design en digitale innovatie. 
+          Met zijn oog voor vormgeving en analytische aanpak onderzoekt hij hoe ideeën vertaald kunnen worden in sterke visuele concepten en toepasbare strategieën.
+        </div>
+      </div>
+
+      <div class="team-member">
+        <button class="team-name">Judith Caeyers (1996)</button>
+        <div class="team-bio">
+          Judith Caeyers is een Belgische architect en ontwerper met ervaring bij bureaus zoals Sculp[IT] en DMOA Architecten. 
+          Daarnaast was ze de afgelopen vier jaar verantwoordelijk voor de werking van Kruul, een eventlocatie in Leuven. 
+          Haar praktijk verbindt disciplines: van interieurs en tijdelijke installaties tot brunchconcepten en websites. 
+          Ze denkt in ervaringen en systemen die logisch en menselijk aanvoelen, en zoekt daarbij steeds naar de essentie — slim en esthetisch vertaald. 
+          Haar werk beweegt zich tussen steen en pixels, structuur en experiment. Inspiratie haalt ze uit plekken over de hele wereld, eettafels en buiten de lijntjes kleuren.
+        </div>
+      </div>
+
+      <div class="team-member">
+        <button class="team-name">Arthur Moens (2002)</button>
+        <div class="team-bio">
+          Arthur Moens studeert Kunstwetenschappen aan de Universiteit Gent en volgt binnenkort een uitwisselingsjaar aan de Universiteit van Bologna. 
+          In 2023 ondersteunde hij Joseph Palframan bij de tentoonstelling <em>Beyond the Vanishing Point</em> en in 2024–2025 nam hij deel aan het Louvain Vague programma van STUK. 
+          Zijn interesse gaat uit naar hedendaagse kunst na 1945, onderzoeksgedreven tentoonstellingen en hoe curatoriële strategieën kritisch kunnen omgaan met epistemisch geweld binnen artistieke praktijken en hun presentaties.
+        </div>
+      </div>
+
     </div>
-  </header>
+  </div>
+</section>
 
-  <main>
-    <h1>Team</h1>
-    <p>
-      Vitrien is een initiatief van Judith Caeyers en Thomas De Paepe, met ondersteuning van een wisselende groep kunstenaars, ontwerpers en denkers.
-    </p>
-    <p>
-      We geloven in de kracht van kleine ontmoetingen, ongewone plekken, en tijdelijke transformaties. Heb je zin om mee te doen of heb je ideeën? Laat het ons weten!
-    </p>
-  </main>
+<style>
+  .team-name {
+    display: block;
+    width: 100%;
+    text-align: left;
+    font-family: Roboto, sans-serif;
+    font-size: 1.1rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    background: none;
+    border: none;
+    padding: 0.5em 0;
+    cursor: pointer;
+  }
+  .team-bio {
+    display: none;
+    font-family: "EB Garamond", serif;
+    font-size: 1rem;
+    margin-bottom: 1em;
+  }
+  .team-member.active .team-bio {
+    display: block;
+  }
+</style>
 
-  <!-- Navigatie onderaan -->
-  <nav class="bottom-nav">
-    <a href="open-call.html">Open Call</a>
-    <a href="kunstenaars.html">Kunstenaars</a>
-    <a href="over-vitrien.html">Over Vitrien</a>
-    <a href="datas-locaties.html">Data's + Locaties</a>
-    <a href="team.html">Team</a>
-  </nav>
-
-</body>
-</html>
+<script>
+  document.querySelectorAll('.team-name').forEach(button => {
+    button.addEventListener('click', () => {
+      const member = button.parentElement;
+      member.classList.toggle('active');
+    });
+  });
+</script>
