--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </p>
     
         <a class="button team-button"
-           href="/team"
+           href="/paginas/team"
            data-lang-nl="Ontmoet het team"
            data-lang-en="Meet the team">
           Ontmoet het team
